// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function [custom component] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1gyu0ys emotion-0"
  />
</DocumentFragment>
`;

exports[`function [returns object] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<div
    class="sh-nioo45 emotion-0"
  />
</DocumentFragment>
`;

exports[`function [with hooks] 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 200px;
  font-size: 1rem;
  color: blue;
}

<div
    class="sh-d0owlu emotion-0"
  />
</DocumentFragment>
`;

exports[`function 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<div
    class="sh-15wbr9h emotion-0"
  />
</DocumentFragment>
`;

exports[`object [as prop] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1fdlqmw emotion-0"
  />
</DocumentFragment>
`;

exports[`object [custom component] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1fdlqmw emotion-0"
  />
</DocumentFragment>
`;

exports[`object [with hooks] 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 200px;
  font-size: 1rem;
  color: blue;
  background-color: #000;
}

<div
    class="sh-1ivp1py emotion-0"
  />
</DocumentFragment>
`;

exports[`object 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<div
    class="sh-1fdlqmw emotion-0"
  />
</DocumentFragment>
`;

exports[`string [as prop] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1nh64sa emotion-0"
  />
</DocumentFragment>
`;

exports[`string [custom component] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1nh64sa emotion-0"
  />
</DocumentFragment>
`;

exports[`string [with hooks] 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 200px;
  font-size: 1rem;
  color: blue;
}

<div
    class="sh-69i6do emotion-0"
  />
</DocumentFragment>
`;

exports[`string 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<div
    class="sh-1nh64sa emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [as prop] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1bko81 emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [css] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background: #000;
}

<div
    class="sh-vuzr9q emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [custom component] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background: #000;
}

<span
    class="sh-1kxzivz emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [falsy] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
}

<div
    class="sh-1ag12a6 emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [function -> object] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background: #000;
}

<div
    class="sh-15enblb emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [function -> string] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background: #000;
}

<div
    class="sh-1e22nx7 emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [function -> string] 2`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
}

<div
    class="sh-1e22nx7 emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [nesting] 1`] = `
<DocumentFragment>
  .sh-undive > .emotion-0 {
  display: none;
}

<div
    class="sh-kki52s emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [plain string] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
}

<div
    class="sh-1ujecri emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [with hooks] 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 200px;
  font-size: 1rem;
  color: blue;
}

<div
    class="sh-1ujecri emotion-0"
  />
</DocumentFragment>
`;
